# bpcl-backend

./: .gitignore  pyproject.toml
bpcl/: __init__.py  main.py
bpcl/api/: router.py
bpcl/api/v1/: router.py
bpcl/api/v1/endpoints/: bids.py  chat_stream.py  file_upload.py  parse_review.py  projects.py
bpcl/core/: logger.py  settings.py
bpcl/db/data_models/: Bid.py  File.py  InstructionSet.py  Project.py  Review.py  __init__.py
bpcl/db/stores/: MongoStore.py
bpcl/db/utils/: __init__.py  filters.py  pagination.py
bpcl/langgraph/: utils.py
bpcl/langgraph/agents/: chatbot.py  compliance_agent.py  instruction_agent.py
bpcl/langgraph/structured_outputs/: Instruction.py  Review.py  __init__.py
bpcl/langgraph/tools/: parser.py
bpcl/langgraph/workflows/: __init__.py  chatbot_graph.py  project_graph.py  reviewer_graph.py
bpcl/services/: generate_chat_response.py  upload_to_s3.py
