[project]
name = "bpcl-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.30.0",
    "boto3>=1.38.46",
    "fastapi[standard]>=0.115.14",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.5",
    "langgraph>=0.5.0",
    "motor>=3.7.1",
    "pymupdf>=1.26.1",
    "pymupdf4llm>=0.0.25",
    "python-multipart>=0.0.20",
]
